--- a/Messager/Modules/ChatRoomsList/ChatRoomsListViewController.storyboard
+++ b/Messager/Modules/ChatRoomsList/ChatRoomsListViewController.storyboard
@@ -16,18 +16,98 @@
                     <view key="view" contentMode="scaleToFill" id="nCV-Pt-ZwB">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vN2-Me-2e5">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatRoomsCell" id="g1m-yz-1AW" customClass="ChatRoomsCell" customModule="Messager" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="79.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g1m-yz-1AW" id="squ-hQ-OmA">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GUJ-pQ-2E7">
+                                                    <rect key="frame" x="16" y="12" width="55" height="55.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="55" id="1mg-Bp-7Dh"/>
+                                                        <constraint firstAttribute="height" constant="55" id="tdJ-P4-Nkq"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mtH-8C-bQ0">
+                                                    <rect key="frame" x="83" y="12" width="278" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h5t-F3-6rT">
+                                                    <rect key="frame" x="369" y="12" width="35" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="textsdjfhkxciyviuxchvbiuycxzv ciyzviucyxzvuiyc xiuyvxcizyvoxzciuyv ioucxyviuzxyvuiy cxziuvyxucizyviuxczy viuoxcyv xiu" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z0q-Kr-gHp">
+                                                    <rect key="frame" x="83" y="33" width="321" height="34.5"/>
+                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="z0q-Kr-gHp" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GUJ-pQ-2E7" secondAttribute="bottom" id="08Q-R0-Lt5"/>
+                                                <constraint firstItem="GUJ-pQ-2E7" firstAttribute="leading" secondItem="squ-hQ-OmA" secondAttribute="leading" constant="16" id="5qJ-6p-RxU"/>
+                                                <constraint firstItem="h5t-F3-6rT" firstAttribute="top" secondItem="GUJ-pQ-2E7" secondAttribute="top" id="B7a-eT-m6A"/>
+                                                <constraint firstItem="z0q-Kr-gHp" firstAttribute="top" secondItem="mtH-8C-bQ0" secondAttribute="bottom" id="Hhe-fI-3R4"/>
+                                                <constraint firstItem="h5t-F3-6rT" firstAttribute="leading" secondItem="mtH-8C-bQ0" secondAttribute="trailing" constant="8" id="J3F-Wq-AlD"/>
+                                                <constraint firstItem="z0q-Kr-gHp" firstAttribute="leading" secondItem="mtH-8C-bQ0" secondAttribute="leading" id="KXY-QN-a2x"/>
+                                                <constraint firstAttribute="bottom" secondItem="GUJ-pQ-2E7" secondAttribute="bottom" constant="12" id="P8q-5L-mVs"/>
+                                                <constraint firstItem="mtH-8C-bQ0" firstAttribute="leading" secondItem="GUJ-pQ-2E7" secondAttribute="trailing" constant="12" id="WfN-9P-Y3Q"/>
+                                                <constraint firstItem="GUJ-pQ-2E7" firstAttribute="top" secondItem="squ-hQ-OmA" secondAttribute="top" constant="12" id="ZGG-pZ-KxX"/>
+                                                <constraint firstItem="mtH-8C-bQ0" firstAttribute="top" secondItem="GUJ-pQ-2E7" secondAttribute="top" id="kDb-B1-u9m"/>
+                                                <constraint firstAttribute="trailing" secondItem="z0q-Kr-gHp" secondAttribute="trailing" constant="10" id="rjf-3V-IwG"/>
+                                                <constraint firstAttribute="trailing" secondItem="h5t-F3-6rT" secondAttribute="trailing" constant="10" id="zYz-hX-TcV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatarImageView" destination="GUJ-pQ-2E7" id="Ny2-Zq-awj"/>
+                                            <outlet property="interlocutorNameLabel" destination="mtH-8C-bQ0" id="hea-22-HPC"/>
+                                            <outlet property="lastMessageTextLabel" destination="z0q-Kr-gHp" id="SET-bU-kSJ"/>
+                                            <outlet property="lastMessageTimeLabel" destination="h5t-F3-6rT" id="u7X-y8-kXB"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="tuF-6v-Eoe"/>
-                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="vN2-Me-2e5" secondAttribute="bottom" id="HTJ-bz-CtI"/>
+                            <constraint firstItem="vN2-Me-2e5" firstAttribute="top" secondItem="nCV-Pt-ZwB" secondAttribute="top" id="X2p-EP-n8Q"/>
+                            <constraint firstItem="tuF-6v-Eoe" firstAttribute="trailing" secondItem="vN2-Me-2e5" secondAttribute="trailing" id="fvo-An-iww"/>
+                            <constraint firstItem="vN2-Me-2e5" firstAttribute="leading" secondItem="tuF-6v-Eoe" secondAttribute="leading" id="jna-ck-RyR"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="vN2-Me-2e5" id="Fms-O5-mp0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v1O-dy-CwT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="112" y="118"/>
+            <point key="canvasLocation" x="111.59420289855073" y="117.85714285714285"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
